--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/Posts/index.html.erb</p>
+<h1>Blogs#index</h1>
+<p>Find me in app/views/blogs/index.html.erb</p>
