createからnewへのリダイレクト機能を追加

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: Post.new, local: true) do |form| %>
-  <div class="blog_content">
+<%= form_with(model: @post, local: true) do |form| %>
+  <div class="post_content">
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
