--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Blogs#index</h1>
-<p>Find me in app/views/blogs/index.html.erb</p>
+<h1>投稿一覧</h1>
+
+<table>
+  <tr>
+    <th>内容</th>
+  </tr>
+
+<% @posts.each do |post| %>
+  <tr>
+    <td><%= post.content %></td>
+  </tr>
+<% end %>
+</table>
+<%= link_to '新しくつぶやきを投稿する', new_post_path %>
