--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,8 @@
 <% @posts.each do |post| %>
   <tr>
     <td><%= post.content %></td>
+
+    <td><%= link_to 'つぶやきを確認する', post_path(post.id) %></td>
   </tr>
 <% end %>
 </table>
