--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,7 @@
     <td><%= post.content %></td>
     <td><%= link_to 'つぶやきを確認する', post_path(post.id) %></td>
     <td><%= link_to "つぶやきを編集する", edit_post_path(post.id) %></td>
+    <td><%= link_to 'つぶやきを削除する', post_path(post.id), method: :delete %></td>
   </tr>
 <% end %>
 </table>
