--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,123 @@
-// Place all the styles related to the posts controller here.
+// Place all the styles related to the stocks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  text-align: center;
+}
+
+
+header {
+  position: fixed;
+  width: 100%;
+  height: 18%;
+  left: 0;
+  top: 0;
+  background-color: yellow;
+  color: blue;
+  text-align: center;
+}
+
+header ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 15px;
+  width: 100%;
+}
+
+header ul a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 10px;
+}
+
+h1 {
+  color: green;
+}
+
+.left{
+text-align: left; 
+float: left;
+}
+
+.right{
+float: left;
+}
+
+.right_menu{
+float: right;
+}
+
+header li {
+}
+
+header ul:after {
+}
+/* ここまでがheader部分の実装 */
+
+.main-header img {
+/* vertical-align: middle; */
+}
+/* main画像（白い「Achieve」の文字の画像）部分の実装 */
+
+.about {
+/* About Achieve部分の実装 */
+}
+
+.about h1{
+  font-size: 1.5rem;
+}
+
+.about p{
+ font-size: 0.8rem;
+}
+/* ここから */
+.function {
+  background-color: #D3D3D3;
+  width: 100%;
+  height: 450px;
+  margin: 0 auto;
+}
+
+.function h1{
+  padding-top: 1.5rem;
+}
+
+.function-images {
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.function-image {
+  float: left;
+  padding: 50px 60px;
+  height: 50px;
+}
+
+.function-image img{
+  
+}
+/* ここまでがfunction部分の実装 */
+
+footer {
+	position: fixed;
+	width: 100%;
+	left: 0;
+	bottom: 0;
+  height: 5%;
+	background-color:blue;
+	color:yellow;
+	text-align: center;
+}
+
+footer p{
+  text-align: center;
+  vertical-align: middle;
+  font-size: 0.8rem;
+}
