--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @post, local: true ,url: confirm_posts_path ) do |form| %>
+<%= form_with(model: @post, local: true ,url: choose_new_or_edit ) do |form| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= @post.errors.count %>件のエラーがあります。</h2>
@@ -18,4 +18,4 @@
   <%= form.submit %>
 <% end %>
 
-<%= link_to "ブログ一覧画面にもどる", posts_path %>
+<%= link_to "つぶやき一覧画面にもどる", posts_path %>
